--- a/notebooks_chap_7/7_2_Backpropagation.ipynb
+++ b/notebooks_chap_7/7_2_Backpropagation.ipynb
@@ -37,8 +37,8 @@
    "metadata": {
     "id": "LdIDglk1FFcG",
     "ExecuteTime": {
-     "end_time": "2024-04-06T23:53:23.370728Z",
-     "start_time": "2024-04-06T23:53:23.365188Z"
+     "end_time": "2024-04-07T00:09:10.795061Z",
+     "start_time": "2024-04-07T00:09:10.141469Z"
     }
    },
    "source": [
@@ -46,7 +46,7 @@
     "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
-   "execution_count": 84
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -90,12 +90,12 @@
    "metadata": {
     "id": "WVM4Tc_jGI0Q",
     "ExecuteTime": {
-     "end_time": "2024-04-06T23:53:23.458026Z",
-     "start_time": "2024-04-06T23:53:23.447792Z"
+     "end_time": "2024-04-07T00:09:10.811507Z",
+     "start_time": "2024-04-07T00:09:10.798060Z"
     }
    },
    "outputs": [],
-   "execution_count": 85
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -108,12 +108,12 @@
    "metadata": {
     "id": "jZh-7bPXIDq4",
     "ExecuteTime": {
-     "end_time": "2024-04-06T23:53:23.492212Z",
-     "start_time": "2024-04-06T23:53:23.487088Z"
+     "end_time": "2024-04-07T00:09:10.826530Z",
+     "start_time": "2024-04-07T00:09:10.818513Z"
     }
    },
    "outputs": [],
-   "execution_count": 86
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -162,12 +162,12 @@
    "metadata": {
     "id": "LgquJUJvJPaN",
     "ExecuteTime": {
-     "end_time": "2024-04-06T23:53:23.605620Z",
-     "start_time": "2024-04-06T23:53:23.599556Z"
+     "end_time": "2024-04-07T00:09:10.842571Z",
+     "start_time": "2024-04-07T00:09:10.830534Z"
     }
    },
    "outputs": [],
-   "execution_count": 87
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -181,8 +181,8 @@
    "metadata": {
     "id": "IN6w5m2ZOhnB",
     "ExecuteTime": {
-     "end_time": "2024-04-06T23:53:23.634891Z",
-     "start_time": "2024-04-06T23:53:23.626683Z"
+     "end_time": "2024-04-07T00:09:10.859278Z",
+     "start_time": "2024-04-07T00:09:10.846590Z"
     }
    },
    "outputs": [
@@ -194,7 +194,7 @@
      ]
     }
    ],
-   "execution_count": 88
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -218,12 +218,12 @@
    "metadata": {
     "id": "6XqWSYWJdhQR",
     "ExecuteTime": {
-     "end_time": "2024-04-06T23:53:23.665660Z",
-     "start_time": "2024-04-06T23:53:23.657962Z"
+     "end_time": "2024-04-07T00:09:10.869762Z",
+     "start_time": "2024-04-07T00:09:10.861276Z"
     }
    },
    "outputs": [],
-   "execution_count": 89
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -235,8 +235,8 @@
    "metadata": {
     "id": "njF2DUQmfttR",
     "ExecuteTime": {
-     "end_time": "2024-04-06T23:53:23.744669Z",
-     "start_time": "2024-04-06T23:53:23.736887Z"
+     "end_time": "2024-04-07T00:09:10.880803Z",
+     "start_time": "2024-04-07T00:09:10.872761Z"
     }
    },
    "outputs": [
@@ -248,7 +248,7 @@
      ]
     }
    ],
-   "execution_count": 90
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -289,7 +289,7 @@
     "        # NOTE!  To take a copy of matrix X, use Z=np.array(X)\n",
     "        # REPLACE THIS LINE\n",
     "\n",
-    "        all_dl_dbiases[layer] = all_dl_df[layer]\n",
+    "        all_dl_dbiases[layer] = np.array(all_dl_df[layer])\n",
     "\n",
     "        # TODO Calculate the derivatives of the loss with respect to the weights at layer from all_dl_df[layer] and all_h[layer] (eq 7.22)\n",
     "        # Don't forget to use np.matmul\n",
@@ -305,19 +305,19 @@
     "        if layer > 0:\n",
     "            # TODO Calculate the derivatives of the loss with respect to the pre-activation f (use derivative of ReLu function, first part of last line of eq. 7.24)\n",
     "            # REPLACE THIS LINE\n",
-    "            all_dl_df[layer - 1] = np.multiply(indicator_function(ReLU(all_f[layer])), all_dl_dh[layer])\n",
+    "            all_dl_df[layer - 1] = indicator_function(all_f[layer - 1]) * all_dl_dh[layer]\n",
     "\n",
     "    return all_dl_dweights, all_dl_dbiases"
    ],
    "metadata": {
     "id": "LJng7WpRPLMz",
     "ExecuteTime": {
-     "end_time": "2024-04-06T23:53:23.780755Z",
-     "start_time": "2024-04-06T23:53:23.768739Z"
+     "end_time": "2024-04-07T00:09:10.899263Z",
+     "start_time": "2024-04-07T00:09:10.885810Z"
     }
    },
    "outputs": [],
-   "execution_count": 91
+   "execution_count": 8
   },
   {
    "cell_type": "code",
@@ -327,12 +327,12 @@
    "metadata": {
     "id": "9A9MHc4sQvbp",
     "ExecuteTime": {
-     "end_time": "2024-04-06T23:53:23.842835Z",
-     "start_time": "2024-04-06T23:53:23.836937Z"
+     "end_time": "2024-04-07T00:09:10.910012Z",
+     "start_time": "2024-04-07T00:09:10.902243Z"
     }
    },
    "outputs": [],
-   "execution_count": 92
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -394,8 +394,8 @@
    "metadata": {
     "id": "PK-UtE3hreAK",
     "ExecuteTime": {
-     "end_time": "2024-04-06T23:53:23.924946Z",
-     "start_time": "2024-04-06T23:53:23.875924Z"
+     "end_time": "2024-04-07T00:09:10.968721Z",
+     "start_time": "2024-04-07T00:09:10.913015Z"
     }
    },
    "outputs": [
@@ -405,12 +405,12 @@
      "text": [
       "-----------------------------------------------\n",
       "Bias 0, derivatives from backprop:\n",
-      "[[-236.7  ]\n",
-      " [ 221.706]\n",
-      " [ 890.321]\n",
-      " [ 407.203]\n",
-      " [ 605.983]\n",
-      " [-316.688]]\n",
+      "[[ -4.486]\n",
+      " [  4.947]\n",
+      " [  6.812]\n",
+      " [ -3.883]\n",
+      " [-24.935]\n",
+      " [  0.   ]]\n",
       "Bias 0, derivatives from finite differences\n",
       "[[ -4.486]\n",
       " [  4.947]\n",
@@ -418,15 +418,15 @@
       " [ -3.883]\n",
       " [-24.935]\n",
       " [  0.   ]]\n",
-      "Failure!  Derivatives different.\n",
+      "Success!  Derivatives match.\n",
       "-----------------------------------------------\n",
       "Bias 1, derivatives from backprop:\n",
-      "[[  90.841]\n",
-      " [ 113.763]\n",
-      " [-459.807]\n",
-      " [-223.554]\n",
-      " [ 222.041]\n",
-      " [ -74.577]]\n",
+      "[[ -0.   ]\n",
+      " [-11.297]\n",
+      " [  0.   ]\n",
+      " [  0.   ]\n",
+      " [-10.722]\n",
+      " [  0.   ]]\n",
       "Bias 1, derivatives from finite differences\n",
       "[[  0.   ]\n",
       " [-11.297]\n",
@@ -434,15 +434,15 @@
       " [  0.   ]\n",
       " [-10.722]\n",
       " [  0.   ]]\n",
-      "Failure!  Derivatives different.\n",
+      "Success!  Derivatives match.\n",
       "-----------------------------------------------\n",
       "Bias 2, derivatives from backprop:\n",
-      "[[  33.233]\n",
-      " [ 244.522]\n",
-      " [  79.788]\n",
-      " [-131.861]\n",
-      " [ 187.691]\n",
-      " [-212.919]]\n",
+      "[[-0.   ]\n",
+      " [-0.   ]\n",
+      " [ 0.938]\n",
+      " [ 0.   ]\n",
+      " [-9.993]\n",
+      " [ 0.508]]\n",
       "Bias 2, derivatives from finite differences\n",
       "[[ 0.   ]\n",
       " [ 0.   ]\n",
@@ -450,15 +450,15 @@
       " [ 0.   ]\n",
       " [-9.993]\n",
       " [ 0.508]]\n",
-      "Failure!  Derivatives different.\n",
+      "Success!  Derivatives match.\n",
       "-----------------------------------------------\n",
       "Bias 3, derivatives from backprop:\n",
-      "[[-65.943]\n",
-      " [ 78.706]\n",
-      " [-22.485]\n",
-      " [ 77.21 ]\n",
-      " [ 44.869]\n",
-      " [ 18.431]]\n",
+      "[[-0.   ]\n",
+      " [-4.8  ]\n",
+      " [-1.661]\n",
+      " [-0.   ]\n",
+      " [ 3.393]\n",
+      " [ 5.391]]\n",
       "Bias 3, derivatives from finite differences\n",
       "[[ 0.   ]\n",
       " [-4.8  ]\n",
@@ -466,15 +466,15 @@
       " [ 0.   ]\n",
       " [ 3.393]\n",
       " [ 5.391]]\n",
-      "Failure!  Derivatives different.\n",
+      "Success!  Derivatives match.\n",
       "-----------------------------------------------\n",
       "Bias 4, derivatives from backprop:\n",
-      "[[-34.381]\n",
-      " [  5.477]\n",
-      " [  3.735]\n",
-      " [-14.858]\n",
-      " [ -5.212]\n",
-      " [-52.625]]\n",
+      "[[-0.   ]\n",
+      " [ 0.   ]\n",
+      " [ 0.   ]\n",
+      " [-0.   ]\n",
+      " [-5.212]\n",
+      " [-0.   ]]\n",
       "Bias 4, derivatives from finite differences\n",
       "[[ 0.   ]\n",
       " [ 0.   ]\n",
@@ -482,15 +482,15 @@
       " [ 0.   ]\n",
       " [-5.212]\n",
       " [ 0.   ]]\n",
-      "Failure!  Derivatives different.\n",
+      "Success!  Derivatives match.\n",
       "-----------------------------------------------\n",
       "Weight 0, derivatives from backprop:\n",
-      "[[-284.04 ]\n",
-      " [ 266.048]\n",
-      " [1068.385]\n",
-      " [ 488.643]\n",
-      " [ 727.18 ]\n",
-      " [-380.026]]\n",
+      "[[ -5.383]\n",
+      " [  5.937]\n",
+      " [  8.174]\n",
+      " [ -4.66 ]\n",
+      " [-29.922]\n",
+      " [  0.   ]]\n",
       "Weight 0, derivatives from finite differences\n",
       "[[ -5.383]\n",
       " [  5.937]\n",
@@ -498,15 +498,15 @@
       " [ -4.66 ]\n",
       " [-29.922]\n",
       " [  0.   ]]\n",
-      "Failure!  Derivatives different.\n",
+      "Success!  Derivatives match.\n",
       "-----------------------------------------------\n",
       "Weight 1, derivatives from backprop:\n",
-      "[[  261.431    54.674   147.012   274.589   339.304     0.   ]\n",
-      " [  327.398    68.47    184.108   343.876   424.921     0.   ]\n",
-      " [-1323.278  -276.741  -744.128 -1389.879 -1717.446     0.   ]\n",
-      " [ -643.367  -134.549  -361.789  -675.747  -835.008     0.   ]\n",
-      " [  639.012   133.638   359.34    671.173   829.356     0.   ]\n",
-      " [ -214.626   -44.885  -120.692  -225.429  -278.558     0.   ]]\n",
+      "[[  0.      0.      0.      0.      0.      0.   ]\n",
+      " [-32.511  -6.799 -18.282 -34.148 -42.196   0.   ]\n",
+      " [  0.      0.      0.      0.      0.      0.   ]\n",
+      " [  0.      0.      0.      0.      0.      0.   ]\n",
+      " [-30.856  -6.453 -17.352 -32.409 -40.047   0.   ]\n",
+      " [  0.      0.      0.      0.      0.      0.   ]]\n",
       "Weight 1, derivatives from finite differences\n",
       "[[  0.      0.      0.      0.      0.      0.   ]\n",
       " [-32.511  -6.799 -18.282 -34.148 -42.196   0.   ]\n",
@@ -514,15 +514,15 @@
       " [  0.      0.      0.      0.      0.      0.   ]\n",
       " [-30.856  -6.453 -17.352 -32.409 -40.047   0.   ]\n",
       " [  0.      0.      0.      0.      0.      0.   ]]\n",
-      "Failure!  Derivatives different.\n",
+      "Success!  Derivatives match.\n",
       "-----------------------------------------------\n",
       "Weight 2, derivatives from backprop:\n",
-      "[[    0.      190.329     0.        0.      111.426     0.   ]\n",
-      " [    0.     1400.398     0.        0.      819.847     0.   ]\n",
-      " [    0.      456.951     0.        0.      267.517     0.   ]\n",
-      " [    0.     -755.181     0.        0.     -442.112     0.   ]\n",
-      " [    0.     1074.921     0.        0.      629.301     0.   ]\n",
-      " [    0.    -1219.404     0.        0.     -713.886     0.   ]]\n",
+      "[[  0.      0.      0.      0.      0.      0.   ]\n",
+      " [  0.      0.      0.      0.      0.      0.   ]\n",
+      " [  0.      5.371   0.      0.      3.145   0.   ]\n",
+      " [  0.      0.      0.      0.      0.      0.   ]\n",
+      " [  0.    -57.233   0.      0.    -33.506   0.   ]\n",
+      " [  0.      2.907   0.      0.      1.702   0.   ]]\n",
       "Weight 2, derivatives from finite differences\n",
       "[[  0.      0.      0.      0.      0.      0.   ]\n",
       " [  0.      0.      0.      0.      0.      0.   ]\n",
@@ -530,15 +530,15 @@
       " [  0.      0.      0.      0.      0.      0.   ]\n",
       " [  0.    -57.233   0.      0.    -33.506   0.   ]\n",
       " [  0.      2.907   0.      0.      1.702   0.   ]]\n",
-      "Failure!  Derivatives different.\n",
+      "Success!  Derivatives match.\n",
       "-----------------------------------------------\n",
       "Weight 3, derivatives from backprop:\n",
-      "[[   0.       0.     -50.475    0.    -589.445 -151.1  ]\n",
-      " [   0.       0.      60.244    0.     703.525  180.344]\n",
-      " [   0.       0.     -17.211    0.    -200.984  -51.521]\n",
-      " [   0.       0.      59.099    0.     690.154  176.916]\n",
-      " [   0.       0.      34.344    0.     401.067  102.811]\n",
-      " [   0.       0.      14.108    0.     164.75    42.233]]\n",
+      "[[  0.      0.      0.      0.      0.      0.   ]\n",
+      " [  0.      0.     -3.674   0.    -42.905 -10.998]\n",
+      " [  0.      0.     -1.272   0.    -14.85   -3.807]\n",
+      " [  0.      0.      0.      0.      0.      0.   ]\n",
+      " [  0.      0.      2.597   0.     30.333   7.776]\n",
+      " [  0.      0.      4.126   0.     48.188  12.353]]\n",
       "Weight 3, derivatives from finite differences\n",
       "[[  0.      0.      0.      0.      0.      0.   ]\n",
       " [  0.      0.     -3.674   0.    -42.905 -10.998]\n",
@@ -546,15 +546,15 @@
       " [  0.      0.      0.      0.      0.      0.   ]\n",
       " [  0.      0.      2.597   0.     30.333   7.776]\n",
       " [  0.      0.      4.126   0.     48.188  12.353]]\n",
-      "Failure!  Derivatives different.\n",
+      "Success!  Derivatives match.\n",
       "-----------------------------------------------\n",
       "Weight 4, derivatives from backprop:\n",
-      "[[   0.    -538.454 -324.091    0.    -145.153  -66.918]\n",
-      " [   0.      85.78    51.63     0.      23.124   10.661]\n",
-      " [   0.      58.498   35.21     0.      15.77     7.27 ]\n",
-      " [   0.    -232.703 -140.062    0.     -62.73   -28.92 ]\n",
-      " [   0.     -81.635  -49.136    0.     -22.007  -10.146]\n",
-      " [   0.    -824.197 -496.076    0.    -222.181 -102.43 ]]\n",
+      "[[  0.      0.      0.      0.      0.      0.   ]\n",
+      " [  0.      0.      0.      0.      0.      0.   ]\n",
+      " [  0.      0.      0.      0.      0.      0.   ]\n",
+      " [  0.      0.      0.      0.      0.      0.   ]\n",
+      " [  0.    -81.635 -49.136   0.    -22.007 -10.146]\n",
+      " [  0.      0.      0.      0.      0.      0.   ]]\n",
       "Weight 4, derivatives from finite differences\n",
       "[[  0.      0.      0.      0.      0.      0.   ]\n",
       " [  0.      0.      0.      0.      0.      0.   ]\n",
@@ -562,11 +562,11 @@
       " [  0.      0.      0.      0.      0.      0.   ]\n",
       " [  0.    -81.635 -49.136   0.    -22.007 -10.146]\n",
       " [  0.      0.      0.      0.      0.      0.   ]]\n",
-      "Failure!  Derivatives different.\n"
+      "Success!  Derivatives match.\n"
      ]
     }
    ],
-   "execution_count": 93
+   "execution_count": 10
   }
  ]
 }
