--- a/notebooks_chap_8/8_4_High_Dimensional_Spaces.ipynb
+++ b/notebooks_chap_8/8_4_High_Dimensional_Spaces.ipynb
@@ -1,24 +1,10 @@
 {
- "nbformat": 4,
- "nbformat_minor": 0,
- "metadata": {
-  "colab": {
-   "provenance": [],
-   "authorship_tag": "ABX9TyPAKqlf9VxztHXKylyJwqe8",
-   "include_colab_link": true
-  },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python"
-  },
-  "language_info": {
-   "name": "python"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "EjLK-kA1KnYX"
+   },
    "source": [
     "# **Notebook 8.4: High-dimensional spaces**\n",
     "\n",
@@ -27,41 +13,47 @@
     "Work through the cells below, running each cell in turn. In various places you will see the words \"TO DO\". Follow the instructions at these places and make predictions about what is going to happen or write code to complete the functions.\n",
     "\n",
     "Contact me at udlbookmail@gmail.com if you find any mistakes or have any suggestions."
-   ],
-   "metadata": {
-    "id": "EjLK-kA1KnYX"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
-    "id": "4ESMmnkYEVAb",
     "ExecuteTime": {
      "end_time": "2024-04-29T19:24:25.654882Z",
      "start_time": "2024-04-29T19:24:24.374084Z"
-    }
+    },
+    "id": "4ESMmnkYEVAb"
    },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.special as sci"
-   ],
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "MonbPEitLNgN"
+   },
    "source": [
     "# How close are points in high dimensions?\n",
     "\n",
     "In this part of the notebook, we investigate how close random points are in 2D, 100D, and 1000D.   In each case, we generate 1000 points and calculate the Euclidean distance between each pair.  "
-   ],
-   "metadata": {
-    "id": "MonbPEitLNgN"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-29T19:25:09.653878Z",
+     "start_time": "2024-04-29T19:25:09.602100Z"
+    },
+    "id": "vZSHVmcWEk14"
+   },
+   "outputs": [],
    "source": [
     "# Fix the random seed, so we all have the same random numbers\n",
     "np.random.seed(0)\n",
@@ -75,19 +67,19 @@
     "# Create 1000 data examples (columns) each with 1000 dimensions (rows)\n",
     "n_dim = 1000\n",
     "x_1000D = np.random.normal(size=(n_dim, n_data))"
-   ],
-   "metadata": {
-    "id": "vZSHVmcWEk14",
-    "ExecuteTime": {
-     "end_time": "2024-04-29T19:25:09.653878Z",
-     "start_time": "2024-04-29T19:25:09.602100Z"
-    }
-   },
-   "outputs": [],
-   "execution_count": 2
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-29T19:35:09.813271Z",
+     "start_time": "2024-04-29T19:35:09.804916Z"
+    },
+    "id": "PhVmnUs8ErD9"
+   },
+   "outputs": [],
    "source": [
     "def distance_ratio(x):\n",
     "    # TODO -- replace the two lines below to calculate the largest and smallest Euclidean distance between\n",
@@ -107,30 +99,17 @@
     "    # Calculate the ratio and return\n",
     "    dist_ratio = largest_dist / smallest_dist\n",
     "    return dist_ratio"
-   ],
-   "metadata": {
-    "id": "PhVmnUs8ErD9",
-    "ExecuteTime": {
-     "end_time": "2024-04-29T19:35:09.813271Z",
-     "start_time": "2024-04-29T19:35:09.804916Z"
-    }
-   },
-   "outputs": [],
-   "execution_count": 5
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "print('Ratio of largest to smallest distance 2D: %3.3f' % (distance_ratio(x_2D)))\n",
-    "print('Ratio of largest to smallest distance 100D: %3.3f' % (distance_ratio(x_100D)))\n",
-    "print('Ratio of largest to smallest distance 1000D: %3.3f' % (distance_ratio(x_1000D)))\n"
-   ],
+   "execution_count": 5,
    "metadata": {
-    "id": "0NdPxfn5GQuJ",
     "ExecuteTime": {
      "end_time": "2024-04-29T19:35:15.893812Z",
      "start_time": "2024-04-29T19:35:11.841713Z"
-    }
+    },
+    "id": "0NdPxfn5GQuJ"
    },
    "outputs": [
     {
@@ -143,30 +122,43 @@
      ]
     }
    ],
-   "execution_count": 6
+   "source": [
+    "print('Ratio of largest to smallest distance 2D: %3.3f' % (distance_ratio(x_2D)))\n",
+    "print('Ratio of largest to smallest distance 100D: %3.3f' % (distance_ratio(x_100D)))\n",
+    "print('Ratio of largest to smallest distance 1000D: %3.3f' % (distance_ratio(x_1000D)))\n"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "If you did this right, you will see that the distance between the nearest and farthest two points in high dimensions is almost the same.  "
-   ],
    "metadata": {
     "id": "uT68c0k8uBxs"
-   }
+   },
+   "source": [
+    "If you did this right, you will see that the distance between the nearest and farthest two points in high dimensions is almost the same.  "
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "b2FYKV1SL4Z7"
+   },
    "source": [
     "# Volume of a hypersphere\n",
     "\n",
     "In the second part of this notebook we calculate the volume of a hypersphere of radius 0.5 (i.e., of diameter 1) as a function of the radius.  Note that you you can check your answer by doing the calculation for 2D using the standard formula for the area of a circle and making sure it matches."
-   ],
-   "metadata": {
-    "id": "b2FYKV1SL4Z7"
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-29T19:39:12.259752Z",
+     "start_time": "2024-04-29T19:39:12.254338Z"
+    },
+    "id": "CZoNhD8XJaHR"
+   },
+   "outputs": [],
    "source": [
     "def volume_of_hypersphere(diameter, dimensions):\n",
     "    # Formula given in Problem 8.7 of the book\n",
@@ -178,31 +170,17 @@
     "    volume = ((diameter / 2) ** dimensions * pi ** (dimensions / 2)) / sci.gamma(dimensions / 2 + 1)\n",
     "\n",
     "    return volume\n"
-   ],
-   "metadata": {
-    "id": "CZoNhD8XJaHR",
-    "ExecuteTime": {
-     "end_time": "2024-04-29T19:39:12.259752Z",
-     "start_time": "2024-04-29T19:39:12.254338Z"
-    }
-   },
-   "outputs": [],
-   "execution_count": 7
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "diameter = 1.0\n",
-    "for c_dim in range(1, 11):\n",
-    "    print(\"Volume of unit diameter hypersphere in %d dimensions is %3.3f\" % (\n",
-    "        c_dim, volume_of_hypersphere(diameter, c_dim)))"
-   ],
+   "execution_count": 7,
    "metadata": {
-    "id": "fNTBlg_GPEUh",
     "ExecuteTime": {
      "end_time": "2024-04-29T19:43:43.189271Z",
      "start_time": "2024-04-29T19:43:43.181934Z"
-    }
+    },
+    "id": "fNTBlg_GPEUh"
    },
    "outputs": [
     {
@@ -220,77 +198,122 @@
       "Volume of unit diameter hypersphere in 9 dimensions is 0.006\n",
       "Volume of unit diameter hypersphere in 10 dimensions is 0.002\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\nicla\\AppData\\Local\\Temp\\ipykernel_11348\\2316093055.py:3: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-      "  print(\"Volume of unit diameter hypersphere in %d dimensions is %3.3f\" % (\n"
-     ]
     }
    ],
-   "execution_count": 10
+   "source": [
+    "diameter = 1.0\n",
+    "for c_dim in range(1, 11):\n",
+    "    print(\"Volume of unit diameter hypersphere in %d dimensions is %3.3f\" % (\n",
+    "        c_dim, volume_of_hypersphere(diameter, c_dim)))"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "You should see that the volume decreases to almost nothing in high dimensions.  All of the volume is in the corners of the unit hypercube (which always has volume 1)."
-   ],
    "metadata": {
     "id": "PtaeGSNBunJl"
-   }
+   },
+   "source": [
+    "You should see that the volume decreases to almost nothing in high dimensions.  All of the volume is in the corners of the unit hypercube (which always has volume 1)."
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "GdyMeOBmoXyF"
+   },
    "source": [
     "# Proportion of hypersphere in outer shell\n",
     "\n",
-    "In the third part of the notebook you will calculate what proportion of the volume of a hypersphere is in the outer 1% of the radius/diameter.  Calculate the volume of a hypersphere and then the volume of a hypersphere with 0.99 of the radius and then figure out the ratio.  "
-   ],
-   "metadata": {
-    "id": "GdyMeOBmoXyF"
-   }
+    "In the third part of the notebook you will calculate what proportion of the volume of a hypersphere is in the outer 1% of the radius/diameter.  Calculate the volume of a hypersphere and then the volume of a hypersphere with 0.99 of the radius and then figure out the ratio."
+   ]
   },
   {
    "cell_type": "code",
-   "source": [
-    "def get_prop_of_volume_in_outer_1_percent(dimension):\n",
-    "    # TODO -- replace this line\n",
-    "    proportion = 1.0\n",
-    "\n",
-    "    return proportion"
-   ],
+   "execution_count": 15,
    "metadata": {
     "id": "8_CxZ2AIpQ8w"
    },
-   "execution_count": null,
-   "outputs": []
+   "outputs": [],
+   "source": [
+    "def get_prop_of_volume_in_outer_1_percent(dimension):\n",
+    "    # TODO -- replace this line\n",
+    "    \n",
+    "    volumen_hypersphere = volume_of_hypersphere(diameter, dimension)\n",
+    "    volumen_hypersphere_099_percent = volume_of_hypersphere(diameter * 0.99, dimension)\n",
+    "\n",
+    "    diff_vol = volumen_hypersphere - volumen_hypersphere_099_percent\n",
+    "    proportion = diff_vol / volumen_hypersphere\n",
+    "\n",
+    "    return proportion"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "id": "LtMDIn2qPVfJ"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of volume in outer 1 percent of radius in 1 dimensions =0.010\n",
+      "Proportion of volume in outer 1 percent of radius in 2 dimensions =0.020\n",
+      "Proportion of volume in outer 1 percent of radius in 10 dimensions =0.096\n",
+      "Proportion of volume in outer 1 percent of radius in 20 dimensions =0.182\n",
+      "Proportion of volume in outer 1 percent of radius in 50 dimensions =0.395\n",
+      "Proportion of volume in outer 1 percent of radius in 100 dimensions =0.634\n",
+      "Proportion of volume in outer 1 percent of radius in 150 dimensions =0.779\n",
+      "Proportion of volume in outer 1 percent of radius in 200 dimensions =0.866\n",
+      "Proportion of volume in outer 1 percent of radius in 250 dimensions =0.919\n",
+      "Proportion of volume in outer 1 percent of radius in 300 dimensions =0.951\n"
+     ]
+    }
+   ],
    "source": [
     "# While we're here, let's look at how much of the volume is in the outer 1% of the radius\n",
     "for c_dim in [1, 2, 10, 20, 50, 100, 150, 200, 250, 300]:\n",
     "    print('Proportion of volume in outer 1 percent of radius in %d dimensions =%3.3f' % (\n",
     "        c_dim, get_prop_of_volume_in_outer_1_percent(c_dim)))"
-   ],
-   "metadata": {
-    "id": "LtMDIn2qPVfJ"
-   },
-   "execution_count": null,
-   "outputs": []
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "id": "n_FVeb-ZwzxD"
+   },
    "source": [
     "You should see that by the time we get to 300 dimensions most of the volume is in the outer 1 percent. <br><br>\n",
     "\n",
     "The conclusion of all of this is that in high dimensions you should be sceptical of your intuitions about how things work.  I have tried to visualize many things in one or two dimensions in the book, but you should also be sceptical about these visualizations!"
-   ],
-   "metadata": {
-    "id": "n_FVeb-ZwzxD"
-   }
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "colab": {
+   "authorship_tag": "ABX9TyPAKqlf9VxztHXKylyJwqe8",
+   "include_colab_link": true,
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
