--- a/notebooks_chap_7/7_1_Backpropagation_in_Toy_Model.ipynb
+++ b/notebooks_chap_7/7_1_Backpropagation_in_Toy_Model.ipynb
@@ -52,19 +52,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
-    "id": "RIPaoVN834Lj",
     "ExecuteTime": {
      "end_time": "2024-04-06T22:10:30.786907Z",
      "start_time": "2024-04-06T22:10:30.516774Z"
-    }
+    },
+    "id": "RIPaoVN834Lj"
    },
+   "outputs": [],
    "source": [
     "# import library\n",
     "import numpy as np"
-   ],
-   "outputs": [],
-   "execution_count": 1
+   ]
   },
   {
    "attachments": {},
@@ -78,13 +78,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
-    "id": "AakK_qen3BpU",
     "ExecuteTime": {
      "end_time": "2024-04-06T22:10:40.594842Z",
      "start_time": "2024-04-06T22:10:40.586379Z"
-    }
+    },
+    "id": "AakK_qen3BpU"
    },
+   "outputs": [],
    "source": [
     "def fn(x, beta0, beta1, beta2, beta3, omega0, omega1, omega2, omega3):\n",
     "    return beta3 + omega3 * np.cos(beta2 + omega2 * np.exp(beta1 + omega1 * np.sin(beta0 + omega0 * x)))\n",
@@ -93,9 +95,7 @@
     "def loss(x, y, beta0, beta1, beta2, beta3, omega0, omega1, omega2, omega3):\n",
     "    diff = fn(x, beta0, beta1, beta2, beta3, omega0, omega1, omega2, omega3) - y\n",
     "    return diff * diff"
-   ],
-   "outputs": [],
-   "execution_count": 2
+   ]
   },
   {
    "attachments": {},
@@ -109,17 +109,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-06T22:11:05.257889Z",
+     "start_time": "2024-04-06T22:11:05.249180Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "pwvOcCxr41X_",
-    "outputId": "9541922c-dfc4-4b2e-dfa3-3298812155ce",
-    "ExecuteTime": {
-     "end_time": "2024-04-06T22:11:05.257889Z",
-     "start_time": "2024-04-06T22:11:05.249180Z"
-    }
+    "outputId": "9541922c-dfc4-4b2e-dfa3-3298812155ce"
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l_i=0.139\n"
+     ]
+    }
+   ],
    "source": [
     "beta0 = 1.0;\n",
     "beta1 = 2.0;\n",
@@ -133,17 +143,7 @@
     "y = 2.0\n",
     "l_i_func = loss(x, y, beta0, beta1, beta2, beta3, omega0, omega1, omega2, omega3)\n",
     "print('l_i=%3.3f' % l_i_func)"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "l_i=0.139\n"
-     ]
-    }
-   ],
-   "execution_count": 3
+   ]
   },
   {
    "attachments": {},
@@ -165,13 +165,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
-    "id": "7t22hALp5zkq",
     "ExecuteTime": {
      "end_time": "2024-04-06T22:12:32.438026Z",
      "start_time": "2024-04-06T22:12:32.427312Z"
-    }
+    },
+    "id": "7t22hALp5zkq"
    },
+   "outputs": [],
    "source": [
     "dldbeta3_func = 2 * (beta3 + omega3 * np.cos(beta2 + omega2 * np.exp(beta1 + omega1 * np.sin(beta0 + omega0 * x))) - y)\n",
     "dldomega0_func = -2 * (\n",
@@ -179,9 +181,7 @@
     "                 omega1 * omega2 * omega3 * x * np.cos(beta0 + omega0 * x) * np.exp(\n",
     "    beta1 + omega1 * np.sin(beta0 + omega0 * x)) * \\\n",
     "                 np.sin(beta2 + omega2 * np.exp(beta1 + omega1 * np.sin(beta0 + omega0 * x)))"
-   ],
-   "outputs": [],
-   "execution_count": 4
+   ]
   },
   {
    "attachments": {},
@@ -195,26 +195,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-06T22:12:38.726271Z",
+     "start_time": "2024-04-06T22:12:38.715365Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "1O3XmXMx-HlZ",
-    "outputId": "389ed78e-9d8d-4e8b-9e6b-5f20c21407e8",
-    "ExecuteTime": {
-     "end_time": "2024-04-06T22:12:38.726271Z",
-     "start_time": "2024-04-06T22:12:38.715365Z"
-    }
+    "outputId": "389ed78e-9d8d-4e8b-9e6b-5f20c21407e8"
    },
-   "source": [
-    "dldomega0_fd = (loss(x, y, beta0, beta1, beta2, beta3, omega0 + 0.00001, omega1, omega2, omega3) - loss(x, y, beta0,\n",
-    "                                                                                                        beta1, beta2,\n",
-    "                                                                                                        beta3, omega0,\n",
-    "                                                                                                        omega1, omega2,\n",
-    "                                                                                                        omega3)) / 0.00001\n",
-    "\n",
-    "print('dydomega0: Function value = %3.3f, Finite difference value = %3.3f' % (dldomega0_func, dldomega0_fd))"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -224,7 +216,15 @@
      ]
     }
    ],
-   "execution_count": 5
+   "source": [
+    "dldomega0_fd = (loss(x, y, beta0, beta1, beta2, beta3, omega0 + 0.00001, omega1, omega2, omega3) - loss(x, y, beta0,\n",
+    "                                                                                                        beta1, beta2,\n",
+    "                                                                                                        beta3, omega0,\n",
+    "                                                                                                        omega1, omega2,\n",
+    "                                                                                                        omega3)) / 0.00001\n",
+    "\n",
+    "print('dydomega0: Function value = %3.3f, Finite difference value = %3.3f' % (dldomega0_func, dldomega0_fd))"
+   ]
   },
   {
    "attachments": {},
@@ -261,13 +261,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
-    "id": "ZWKAq6HC90qV",
     "ExecuteTime": {
      "end_time": "2024-04-06T22:19:02.423878Z",
      "start_time": "2024-04-06T22:19:02.415518Z"
-    }
+    },
+    "id": "ZWKAq6HC90qV"
    },
+   "outputs": [],
    "source": [
     "# TODO compute all the f_k and h_k terms\n",
     "# Replace the code below\n",
@@ -280,34 +282,22 @@
     "h3 = np.cos(f2)\n",
     "f3 = beta3 + omega3 * h3\n",
     "l_i = (f3 - y) ** 2\n"
-   ],
-   "outputs": [],
-   "execution_count": 9
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-06T22:15:39.054164Z",
+     "start_time": "2024-04-06T22:15:39.044337Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "ibxXw7TUW4Sx",
-    "outputId": "4575e3eb-2b16-4e0b-c84e-9c22b443c3ce",
-    "ExecuteTime": {
-     "end_time": "2024-04-06T22:15:39.054164Z",
-     "start_time": "2024-04-06T22:15:39.044337Z"
-    }
+    "outputId": "4575e3eb-2b16-4e0b-c84e-9c22b443c3ce"
    },
-   "source": [
-    "# Let's check we got that right:\n",
-    "print(\"f0: true value = %3.3f, your value = %3.3f\" % (1.230, f0))\n",
-    "print(\"h1: true value = %3.3f, your value = %3.3f\" % (0.942, h1))\n",
-    "print(\"f1: true value = %3.3f, your value = %3.3f\" % (1.623, f1))\n",
-    "print(\"h2: true value = %3.3f, your value = %3.3f\" % (5.068, h2))\n",
-    "print(\"f2: true value = %3.3f, your value = %3.3f\" % (7.137, f2))\n",
-    "print(\"h3: true value = %3.3f, your value = %3.3f\" % (0.657, h3))\n",
-    "print(\"f3: true value = %3.3f, your value = %3.3f\" % (2.372, f3))\n",
-    "print(\"l_i original = %3.3f, l_i from forward pass = %3.3f\" % (l_i_func, l_i))\n"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -324,7 +314,17 @@
      ]
     }
    ],
-   "execution_count": 8
+   "source": [
+    "# Let's check we got that right:\n",
+    "print(\"f0: true value = %3.3f, your value = %3.3f\" % (1.230, f0))\n",
+    "print(\"h1: true value = %3.3f, your value = %3.3f\" % (0.942, h1))\n",
+    "print(\"f1: true value = %3.3f, your value = %3.3f\" % (1.623, f1))\n",
+    "print(\"h2: true value = %3.3f, your value = %3.3f\" % (5.068, h2))\n",
+    "print(\"f2: true value = %3.3f, your value = %3.3f\" % (7.137, f2))\n",
+    "print(\"h3: true value = %3.3f, your value = %3.3f\" % (0.657, h3))\n",
+    "print(\"f3: true value = %3.3f, your value = %3.3f\" % (2.372, f3))\n",
+    "print(\"l_i original = %3.3f, l_i from forward pass = %3.3f\" % (l_i_func, l_i))\n"
+   ]
   },
   {
    "attachments": {},
@@ -371,13 +371,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
-    "id": "gCQJeI--Egdl",
     "ExecuteTime": {
      "end_time": "2024-04-06T22:23:07.631170Z",
      "start_time": "2024-04-06T22:23:07.624755Z"
-    }
+    },
+    "id": "gCQJeI--Egdl"
    },
+   "outputs": [],
    "source": [
     "# TODO -- Compute the derivatives of the output with respect\n",
     "# to the intermediate computations h_k and f_k (i.e, run the backward pass)\n",
@@ -390,33 +392,22 @@
     "dldf1 = np.exp(f1) * dldh2\n",
     "dldh1 = omega1 * dldf1\n",
     "dldf0 = np.cos(f0) * dldh1\n"
-   ],
-   "outputs": [],
-   "execution_count": 10
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-06T22:23:10.214190Z",
+     "start_time": "2024-04-06T22:23:10.202460Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "dS1OrLtlaFr7",
-    "outputId": "414f0862-ae36-4a0e-b68f-4758835b0e23",
-    "ExecuteTime": {
-     "end_time": "2024-04-06T22:23:10.214190Z",
-     "start_time": "2024-04-06T22:23:10.202460Z"
-    }
+    "outputId": "414f0862-ae36-4a0e-b68f-4758835b0e23"
    },
-   "source": [
-    "# Let's check we got that right\n",
-    "print(\"dldf3: true value = %3.3f, your value = %3.3f\" % (0.745, dldf3))\n",
-    "print(\"dldh3: true value = %3.3f, your value = %3.3f\" % (2.234, dldh3))\n",
-    "print(\"dldf2: true value = %3.3f, your value = %3.3f\" % (-1.683, dldf2))\n",
-    "print(\"dldh2: true value = %3.3f, your value = %3.3f\" % (-3.366, dldh2))\n",
-    "print(\"dldf1: true value = %3.3f, your value = %3.3f\" % (-17.060, dldf1))\n",
-    "print(\"dldh1: true value = %3.3f, your value = %3.3f\" % (6.824, dldh1))\n",
-    "print(\"dldf0: true value = %3.3f, your value = %3.3f\" % (2.281, dldf0))"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -432,17 +423,28 @@
      ]
     }
    ],
-   "execution_count": 11
+   "source": [
+    "# Let's check we got that right\n",
+    "print(\"dldf3: true value = %3.3f, your value = %3.3f\" % (0.745, dldf3))\n",
+    "print(\"dldh3: true value = %3.3f, your value = %3.3f\" % (2.234, dldh3))\n",
+    "print(\"dldf2: true value = %3.3f, your value = %3.3f\" % (-1.683, dldf2))\n",
+    "print(\"dldh2: true value = %3.3f, your value = %3.3f\" % (-3.366, dldh2))\n",
+    "print(\"dldf1: true value = %3.3f, your value = %3.3f\" % (-17.060, dldf1))\n",
+    "print(\"dldh1: true value = %3.3f, your value = %3.3f\" % (6.824, dldh1))\n",
+    "print(\"dldf0: true value = %3.3f, your value = %3.3f\" % (2.281, dldf0))"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
-    "id": "1I2BhqZhGMK6",
     "ExecuteTime": {
      "end_time": "2024-04-06T22:31:02.524313Z",
      "start_time": "2024-04-06T22:31:02.518405Z"
-    }
+    },
+    "id": "1I2BhqZhGMK6"
    },
+   "outputs": [],
    "source": [
     "# TODO -- Calculate the final derivatives with respect to the beta and omega terms\n",
     "\n",
@@ -453,36 +455,23 @@
     "dldbeta1 = dldf1\n",
     "dldomega1 = h1 * dldf1\n",
     "dldbeta0 = dldf0\n",
-    "dldomega0 = x\n"
-   ],
-   "outputs": [],
-   "execution_count": 12
+    "dldomega0 = x * dldf0\n"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-06T22:31:05.372368Z",
+     "start_time": "2024-04-06T22:31:05.362249Z"
+    },
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "38eiOn2aHgHI",
-    "outputId": "1a67a636-e832-471e-e771-54824363158a",
-    "ExecuteTime": {
-     "end_time": "2024-04-06T22:31:05.372368Z",
-     "start_time": "2024-04-06T22:31:05.362249Z"
-    }
+    "outputId": "1a67a636-e832-471e-e771-54824363158a"
    },
-   "source": [
-    "# Let's check we got them right\n",
-    "print('dldbeta3: Your value = %3.3f, True value = %3.3f' % (dldbeta3, 0.745))\n",
-    "print('dldomega3: Your value = %3.3f, True value = %3.3f' % (dldomega3, 0.489))\n",
-    "print('dldbeta2: Your value = %3.3f, True value = %3.3f' % (dldbeta2, -1.683))\n",
-    "print('dldomega2: Your value = %3.3f, True value = %3.3f' % (dldomega2, -8.530))\n",
-    "print('dldbeta1: Your value = %3.3f, True value = %3.3f' % (dldbeta1, -17.060))\n",
-    "print('dldomega1: Your value = %3.3f, True value = %3.3f' % (dldomega1, -16.079))\n",
-    "print('dldbeta0: Your value = %3.3f, True value = %3.3f' % (dldbeta0, 2.281))\n",
-    "print('dldomega0: Your value = %3.3f, Function value = %3.3f, Finite difference value = %3.3f' % (\n",
-    "    dldomega0, dldomega0_func, dldomega0_fd))"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -495,11 +484,22 @@
       "dldbeta1: Your value = -17.060, True value = -17.060\n",
       "dldomega1: Your value = -16.079, True value = -16.079\n",
       "dldbeta0: Your value = 2.281, True value = 2.281\n",
-      "dldomega0: Your value = 2.300, Function value = 5.246, Finite difference value = 5.246\n"
+      "dldomega0: Your value = 5.246, Function value = 5.246, Finite difference value = 5.246\n"
      ]
     }
    ],
-   "execution_count": 13
+   "source": [
+    "# Let's check we got them right\n",
+    "print('dldbeta3: Your value = %3.3f, True value = %3.3f' % (dldbeta3, 0.745))\n",
+    "print('dldomega3: Your value = %3.3f, True value = %3.3f' % (dldomega3, 0.489))\n",
+    "print('dldbeta2: Your value = %3.3f, True value = %3.3f' % (dldbeta2, -1.683))\n",
+    "print('dldomega2: Your value = %3.3f, True value = %3.3f' % (dldomega2, -8.530))\n",
+    "print('dldbeta1: Your value = %3.3f, True value = %3.3f' % (dldbeta1, -17.060))\n",
+    "print('dldomega1: Your value = %3.3f, True value = %3.3f' % (dldomega1, -16.079))\n",
+    "print('dldbeta0: Your value = %3.3f, True value = %3.3f' % (dldbeta0, 2.281))\n",
+    "print('dldomega0: Your value = %3.3f, Function value = %3.3f, Finite difference value = %3.3f' % (\n",
+    "    dldomega0, dldomega0_func, dldomega0_fd))"
+   ]
   },
   {
    "attachments": {},
@@ -520,11 +520,20 @@
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
-   "name": "python3",
-   "language": "python"
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
